Notebook: cleanup introduction and database setup instructions

--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projecte github"
+    "# Projecte de Bases de Dades"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aquest notebook conté els queries que hem usat per obtenir les dades i l'anàlisis d'aquestes."
    ]
   },
   {
@@ -20,8 +27,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment the following line to install PyMySQL if necessary\n",
-    "#!pip install PyMySQL"
+    "# Uncomment to install dependencies if necessary\n",
+    "#!pip install PyMySQL\n",
+    "#!pip install scikit-learn\n",
+    "#!pip install nltk\n",
+    "#!pip install wordcloud\n",
+    "#!pip install networkx"
    ]
   },
   {
@@ -40,7 +51,6 @@
     "import warnings\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.cm as cm\n",
     "import matplotlib.patches as mpatches\n",
     "plt.style.use('default')\n",
     "\n",
@@ -53,50 +63,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project configuration\n",
+    "# Creació de la base de dades\n",
     "\n",
-    "The file that we are going to use to set up the basic structure:\n",
-    "\n",
-    "GitHubScraper/JupyterNotebook/Structure/githubProjectStructure.sql\n",
-    "\n",
-    "from the github repository.\n",
-    "\n",
-    "### Step 1, import the structure\n",
-    "In workbench: \n",
-    "\"Server\" -> \"Data Import\", and then you should select the direction of \"githubProjectStructure.sql\" using the 3 dots and import from self-contained file like in the following image:\n",
-    "\n",
-    "![Javatpoint](./Images/Project_Setup/data_import.png)  \n",
-    "\n",
-    "Then scroll down, and create a new Schema by clicking on the \"New...\" button. Name it: \"githubProject\".\n",
-    "\n",
-    "![Javatpoint](./Images/Project_Setup/create_new_schema.png)  \n",
-    "\n",
-    "Scroll to the bottom, and in the bottom right, click on \"Start import\". If there are no errors, it will transitionate to \"Import progress\" and indicate success.\n",
-    "\n",
-    "Refresh the scehmas:\n",
-    "\n",
-    "![Javatpoint](./Images/Project_Setup/refresh.png)  \n",
-    "\n",
-    "### Step 2, importing the data from the csv files\n",
-    "\n",
-    "Download the csv files [here](https://drive.google.com/drive/folders/1NWhfFss0_M9V_clkcE9TH-Fy3oIEndWV?usp=sharing).\n",
-    "\n",
-    "Selecting the \"githubProject\" scheme, right click and \"Table Data Import Wizard\", with this, we are going to import each csv file to the matching table.\n",
-    "\n",
-    "You have to select the .csv you want to import, for example in this case, the trendVisits.csv\n",
-    "\n",
-    "![Javatpoint](./Images/Project_Setup/file_import.png) \n",
-    "\n",
-    "Then, since you already have the structure, you have to use the existing table that matches with the correct csv file:\n",
-    "\n",
-    "![Javatpoint](./Images/Project_Setup/use_existing.png) \n",
-    "\n",
-    "After that, check that the variables type are correct and import it. Do this for each csv file.\n",
-    "\n",
-    "You can also verify the data by doing this:\n",
-    "\n",
-    "![Javatpoint](./Images/Project_Setup/verify.png) \n",
-    "\n"
+    "El backup de la base de dades final es pot trobar en `Database/github.sql`. Aquest conté el schema i les dades; per crear la base de dades només cal executar tot el fitxer (amb el botó ⚡ en MySQL Workbench). La base de dades s'anomena `github`.\n"
    ]
   },
   {
@@ -105,7 +74,7 @@
    "source": [
     "# Connexió\n",
     "\n",
-    "Primer de tot, cal connectar-se a la base de dades:"
+    "Per començar a treballar amb la base de dades, cal connectar-se primer:"
    ]
   },
   {
@@ -114,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_name = \"githubProject\"\n",
+    "db_name = \"github\"\n",
     "db_host = \"localhost\"\n",
     "db_port = 3306\n",
     "db_username = \"root\"\n",
@@ -147,22 +116,16 @@
     "    \"\"\"\n",
     "    Executes a query and returns the results as a pandas dataframe.\n",
     "    \"\"\"\n",
-    "    try:\n",
-    "        cursor.execute(query)\n",
-    "        output = cursor.fetchall()\n",
-    "        # Fetch column names from cursor's description\n",
-    "        columns = [desc[0] for desc in cursor.description]\n",
-    "        \n",
-    "        # Convert output to pandas DataFrame\n",
-    "        if output:\n",
-    "            df = pd.DataFrame(output, columns=columns)\n",
-    "            print(\"Query executed successfully!\")\n",
-    "        return output, df\n",
-    "            \n",
-    "    except pymysql.Error as e:\n",
-    "        print(\"Error executing query:\")\n",
-    "        warnings.warn(str(e))\n",
-    "        return None, None"
+    "    cursor.execute(query)\n",
+    "    output = cursor.fetchall()\n",
+    "\n",
+    "    # Fetch column names from cursor's description\n",
+    "    columns = [desc[0] for desc in cursor.description]\n",
+    "    \n",
+    "    # Convert output to pandas DataFrame\n",
+    "    if output:\n",
+    "        df = pd.DataFrame(output, columns=columns)\n",
+    "    return output, df"
    ]
   },
   {
@@ -170,14 +133,7 @@
    "metadata": {},
    "source": [
     "# Taules\n",
-    "Exemples de query per cada entitat de la base de dades."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Repositories"
+    "A continuació es mostren exemples de les entitats dins la base de dades."
    ]
   },
   {
@@ -186,8 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Repositories\n",
     "query = \"SELECT * FROM Repositories WHERE mainLanguage != \\\"\\\"\"\n",
-    "print(query)\n",
     "output_repo, df_repo = execute_select_query(cursor, query)\n",
     "df_repo.tail(5)"
    ]
@@ -198,6 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Repository visits\n",
     "query = \"SELECT * FROM RepositoryVisits;\"\n",
     "\n",
     "output_repo_visists, df_repo_visists = execute_select_query(cursor, query)\n",
@@ -210,111 +167,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"SELECT * FROM RepositoryTopics;\"\n",
+    "# Topics/tags of repositories\n",
+    "query = \"\"\"\n",
+    "SELECT r.name, r.owner, GROUP_CONCAT(t.topic) as topics FROM Repositories r\n",
+    "JOIN RepositoryTopics t\n",
+    "ON t.repo = r.name AND t.owner = r.owner\n",
+    "GROUP BY r.name, r.owner\n",
+    "\"\"\"\n",
     "\n",
     "output_repo_topics, df_repo_topics = execute_select_query(cursor, query)\n",
     "df_repo_topics.tail(5)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Owners"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"SELECT * FROM Owners;\"\n",
-    "# Use _ to ignore\n",
-    "_, df_owners = execute_select_query(cursor, query)\n",
-    "df_owners.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"SELECT * FROM OwnerVisits;\"\n",
-    "\n",
-    "output_owner_visits, df_owner_visits = execute_select_query(cursor, query)\n",
-    "df_owner_visits.head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Commits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Commit messages\n",
     "query = \"SELECT * FROM Commits;\"\n",
-    "\n",
     "output_commits, df_commits = execute_select_query(cursor, query)\n",
-    "\n",
     "df_commits.head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Topics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"SELECT * FROM Topics;\"\n",
-    "\n",
-    "output_topics, df_topics = execute_select_query(cursor, query)\n",
-    "df_topics.tail(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"SELECT CAST(date AS Date) AS date, name, repositories, followers FROM TopicVisits;\"\n",
-    "\n",
-    "_, df_topic_visits = execute_select_query(cursor, query)\n",
-    "df_topic_visits.head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Trend"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"SELECT * FROM TrendVisits;\"\n",
-    "\n",
-    "_, df_trend_visits = execute_select_query(cursor, query)\n",
-    "df_trend_visits.head(5)"
    ]
   },
   {
