--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -195,34 +195,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Planificació de l'anàlisi\n",
-    "### Estadístiques bàsiques\n",
-    "\n",
+    "# Anàlisi quantitatiu\n",
+    "A partir de les dades també ens interessa realitzar uns anàlisi quantitatiu:\n",
     "* Distribució dels temes principals (gràfic de barres o de pastís). És a dir, en quina proporció dels nostres repositoris estudiats es tracten.\n",
-    "* Distribució de llenguatges (gràfic de barres o de pastís). Com l'anterior.\n",
-    "* Evolució temporal de l'interès en els temes: repositoris per tema, seguidors per tema.\n",
-    "\n",
-    "### Reducció dimensional per a una visió general dels repositoris\n",
-    "\n",
-    "El que volem dir aquí és realitzar una PCA (anàlisi de components principals) per poder tenir una idea de l'estructura de tot el conjunt de dades. Després, coloraríem els punts de dades en funció del llenguatge utilitzat, per exemple, per veure si aquests grups tenen característiques similars i es troben propers en el dataframe o no.\n",
-    "\n",
-    "* Crear un dataframe que conté totes les dades de RepositoryVisits per a una certa data per a tots els repositoris estudiats.\n",
-    "* Realitzar una estandardització de les dades (és a dir, per evitar que algunes variables com els commits siguin molt més importants que altres com els forks).\n",
-    "* Realitzar una PCA en 2 components sobre aquest.\n",
-    "* Representar els resultats agrupant els punts en funció de diferents criteris:\n",
-    "    + mainLanguage\n",
-    "    + topic\n",
-    "\n",
-    "## Preguntes obertes\n",
-    "* Com utilitzar estrelles i tendències?\n",
-    "* Com utilitzar les contribucions dels propietaris?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Distributions"
+    "* Distribució de llenguatges (gràfic de barres o de pastís). Com l'anterior."
    ]
   },
   {
@@ -231,8 +207,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define cut number\n",
-    "n = 20"
+    "# RepositoryTopics is the N-N relationship table for Repository-Topic;\n",
+    "# ie. the topics of each repository.\n",
+    "output_repo_topics, df_repo_topics = execute_select_query(cursor, \"SELECT * FROM RepositoryTopics;\")"
    ]
   },
   {
@@ -241,15 +218,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n = 20 # We'll check the top 20 topics used\n",
     "topics = df_repo_topics[\"topic\"].value_counts().to_frame()\n",
     "topics_count = topics.sum()\n",
     "n_topics_count = topics[:n].sum()\n",
     "n_topics_name = df_repo_topics[\"topic\"].value_counts()[:n].index.to_list()\n",
-    "print(\"Main topics present in {:.2f}% of repositories.\".format(float((n_topics_count / topics_count).iloc[0]) * 100))\n",
-    "print(topics.shape)\n",
-    "display(topics)\n",
-    "topics[:n].plot.bar()\n",
-    "print(n_topics_name)"
+    "print(\"Most used topics (present in {:.2f}% of repositories):\".format(float((n_topics_count / topics_count).iloc[0]) * 100))\n",
+    "display(topics[:n])\n",
+    "ax = topics[:n].plot.bar()"
    ]
   },
   {
@@ -260,13 +236,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analitzem a continuació els llenguatges més usats:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove duplicates\n",
-    "tmp = df_repo.drop(df_repo[df_repo[\"mainLanguage\"] == \"\"].index)\n",
+    "tmp = df_repo.drop(df_repo[df_repo[\"mainLanguage\"] == \"\"].index) # Ignore repositories where the main language is unknown\n",
     "languages = tmp[\"mainLanguage\"].value_counts().to_frame()\n",
     "display(languages)\n",
     "languages_count = languages.sum()\n",
@@ -281,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Els llenguatges més utilitzats en la nostra mostra de repositoris són llenguatges orientats al desenvolupament web. Seguits de Python, Go, Java i C++. Aquests llenguatges més utilitzats representen més del 90% dels repositoris."
+    "Els llenguatges més utilitzats en la nostra mostra de repositoris són llenguatges orientats al desenvolupament web; aquest resultat és coherent amb el fet que topics/tags per a frameworks de desenvolupament web com React són els més usats. Seguits de Python, Go, Java i C++. Aquests llenguatges més utilitzats representen més del 90% dels repositoris."
    ]
   },
   {
@@ -290,82 +272,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_topic_visits_n_cut = df_topic_visits[df_topic_visits[\"name\"].isin(n_topics_name)]\n",
-    "df_topicv_repos = df_topic_visits_n_cut[[\"date\", \"name\", \"repositories\"]]\n",
-    "n_topics_name\n",
-    "display(df_topic_visits_n_cut)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_topicv_repos.pivot_table(index='date', columns=\"name\", values=\"repositories\", aggfunc=\"sum\").plot()"
+    "# TODO a similar chart for TopicVisits"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O he fet algo fatal o vam actualitzar les dades només aquests tres dies i, per tant, no hi surt res interessant"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Volem ara veure una evolució de la popularitat dels repositoris tractant els temes que hem identificat com a principals. És a dir, volem veure com ha anat canviant el nombre d'estrelles que reben aquests repositoris. Aquesta és una bona oportunitat que tenim per a treballar els joins entre taules."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"WITH RepositoriesMainTopics AS (\n",
-    "\tSELECT repo AS name, topic\n",
-    "    FROM RepositoryTopics\n",
-    "    WHERE topic IN ('hacktoberfest', 'javascript', 'react', 'typescript', 'nodejs', 'python', 'docker', 'nextjs', 'golang', 'go', 'git', 'minecraft', 'java', 'vue', 'machine-learning', 'android', 'deep-learning', 'github', 'ios', 'cli')\n",
-    "), TrendingTopic AS (\n",
-    "\tSELECT date, repo_name AS name, topic,  starsToday as stars\n",
-    "    FROM RepositoriesMainTopics\n",
-    "    JOIN TrendVisits ON TrendVisits.repo_name = RepositoriesMainTopics.name\n",
-    ")\n",
-    "SELECT CAST(date AS Date) AS date, topic, SUM(stars) AS stars\n",
-    "FROM TrendingTopic\n",
-    "GROUP BY date, topic\"\"\"\n",
-    "\"SELECT * FROM TrendVisits;\"\n",
-    "_, df_trendRepositoriesMainTopics = execute_select_query(cursor, query)\n",
-    "df_trendRepositoriesMainTopics.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_trendRepositoriesMainTopics[\"stars\"] = df_trendRepositoriesMainTopics[\"stars\"].astype(float)\n",
-    "df_trendRepositoriesMainTopics.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_trendRepositoriesMainTopics.pivot_table(index='date', columns=\"topic\", values=\"stars\", aggfunc=\"sum\").plot()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I de moment aquest gràfic no aporta res perquè les dades del moment van ser totes extretes el mateix dia."
+    "# Reducció dimensional per a una visió general dels repositoris\n",
+    "\n",
+    "Una pregunta que ens interessava era si el llenguatge dels repositoris té correlació amb les seves mètriques (nombre de commits, stars, followers).\n",
+    "\n",
+    "Per contestar aquesta pregunta podem realitzar un Principal Component Analysis (PCA) per tenir una idea de l'estructura de tot el conjunt de dades. Després, coloraríem els punts de dades en funció del llenguatge utilitzat, per exemple, per veure si aquests grups tenen característiques similars i es troben propers en el dataframe o no.\n",
+    "\n",
+    "* Crear un dataframe que conté totes les dades de RepositoryVisits amb les dades més actualitzades per a tots els repositoris estudiats.\n",
+    "* Realitzar una estandardització de les dades (és a dir, per evitar que algunes variables com els commits siguin molt més importants que altres com els forks).\n",
+    "* Realitzar una PCA en 2 components sobre aquest.\n",
+    "* Representar els resultats agrupant els punts en funció de diferents criteris:\n",
+    "    + mainLanguage\n",
+    "    + topic\n"
    ]
   },
   {
@@ -381,14 +306,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"SELECT CONCAT(RepositoryVisits.owner,RepositoryVisits.name) AS id, forks, commits, stars, watchers, contributors, openIssues, closedIssues, mainLanguage\n",
+    "# Fetch the numerical fields of RepositoryVisits that we'll use for the PCA\n",
+    "query = \"\"\"\n",
+    "SELECT CONCAT(RepositoryVisits.owner, RepositoryVisits.name) AS id, forks, commits, stars, watchers, contributors, openIssues, closedIssues, mainLanguage\n",
     "FROM RepositoryVisits\n",
     "JOIN Repositories ON RepositoryVisits.owner = Repositories.owner AND RepositoryVisits.name = Repositories.name\n",
     "WHERE CAST(date AS Date) = '2024-04-16'\n",
     "\"\"\"\n",
     "\n",
     "_, df = execute_select_query(cursor, query)\n",
-    "df.head(5)\n"
+    "df.head(5)"
    ]
   },
   {
@@ -397,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Just keep most used languages\n",
+    "# Keep only the most used languages\n",
     "top_languages = df_repo['mainLanguage'].value_counts()[:10].index.tolist()\n",
     "\n",
     "df = df[df['mainLanguage'].isin(top_languages)]\n",
@@ -407,10 +334,10 @@
     "    if (df[column].dtype) != \"O\":\n",
     "        q_low = df[column].quantile(0.05)\n",
     "        q_high = df[column].quantile(0.95)\n",
-    "        print(q_low)\n",
-    "        print(q_high)\n",
+    "        # print(q_low)\n",
+    "        # print(q_high)\n",
     "        df = df[(df[column] <= q_high) & (df[column] >= q_low)]\n",
-    "df.head(5)\n"
+    "df.head(5)"
    ]
   },
   {
@@ -440,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Standarize\n",
+    "# Standarize each attribute\n",
     "X_std = StandardScaler().fit_transform(X)\n",
     "print(X_std[0:5])"
    ]
@@ -469,7 +396,10 @@
     "cmap = plt.get_cmap('viridis')\n",
     "colors = [cmap(i) for i in np.linspace(0, 1, 10)]\n",
     "#color_map = dict(zip(l, colors))\n",
-    "color_map = {'C': (0,0.9,1,1),\n",
+    "\n",
+    "# Colors to use for each language in the scatterplot\n",
+    "color_map = {\n",
+    " 'C': (0,0.9,1,1),\n",
     " 'C#': (0.79,0,1,1),\n",
     " 'C++': (0,0.4,1,1),\n",
     " 'Go': (1,0.6,0,1),\n",
@@ -478,7 +408,9 @@
     " 'JavaScript': (1,1,0,1),\n",
     " 'Python': (0,1,0.2,1),\n",
     " 'Shell': (0.6,0.6,0.6,1),\n",
-    " 'TypeScript': (0.9,1,0,1)}"
+    " 'TypeScript': (0.9,1,0,1),\n",
+    " 'PHP': (0.5,1,0,1),\n",
+    "}"
    ]
   },
   {
@@ -487,21 +419,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "scatter = plt.scatter(X_pca[:,0], X_pca[:,1], c = df[\"mainLanguage\"].map(color_map), alpha=0.5)\n",
     "\n",
-    "legend_handles = [mpatches.Patch(color=color_map[language], label=language) for language in top_languages]\n",
+    "legend_handles = [mpatches.Patch(color=color_map[language], label=language)\n",
+    " for language in top_languages]\n",
     "plt.legend(handles=legend_handles, title='Languages')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "color_map"
    ]
   },
   {
@@ -1638,6 +1561,93 @@
    "source": [
     "# Closes the connection\n",
     "dataBaseConnection.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Altres analisis no-conclusius\n",
+    "Per deficiències en la recollida de dades desafortunadament hi ha altres anàlisis que no hem pogut fer. A continuació mostrem com es farien si tinguéssim les dades necessàries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El primer d'aquests era visualitzar l'evolució de la quantitat de repositoris en el temps per cada topic. Desafortunadament hem perdut la majoria de les dades recollides; només les tenim per uns pocs dies, i per tant la gràfica no es gaire útil."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, df_topic_visits = execute_select_query(cursor, \"SELECT CAST(date AS Date) AS date, name, repositories, followers FROM TopicVisits;\")\n",
+    "df_topic_visits_n_cut = df_topic_visits[df_topic_visits[\"name\"].isin(n_topics_name)]\n",
+    "df_topicv_repos = df_topic_visits_n_cut[[\"date\", \"name\", \"repositories\"]]\n",
+    "n_topics_name\n",
+    "display(df_topic_visits_n_cut)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_topicv_repos.pivot_table(index='date', columns=\"name\", values=\"repositories\", aggfunc=\"sum\").plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Volem ara veure una evolució de la popularitat dels repositoris tractant els temes que hem identificat com a principals. És a dir, volem veure com ha anat canviant el nombre d'estrelles que reben aquests repositoris. Aquesta és una bona oportunitat que tenim per a treballar els joins entre taules."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "WITH RepositoriesMainTopics AS (\n",
+    "\tSELECT repo AS name, topic\n",
+    "    FROM RepositoryTopics\n",
+    "    WHERE topic IN ('hacktoberfest', 'javascript', 'react', 'typescript', 'nodejs', 'python', 'docker', 'nextjs', 'golang', 'go', 'git', 'minecraft', 'java', 'vue', 'machine-learning', 'android', 'deep-learning', 'github', 'ios', 'cli')\n",
+    "), TrendingTopic AS (\n",
+    "\tSELECT date, repoName AS name, topic, starsToday as stars\n",
+    "    FROM RepositoriesMainTopics\n",
+    "    JOIN TrendVisits ON TrendVisits.repoName = RepositoriesMainTopics.name\n",
+    ")\n",
+    "SELECT CAST(date AS Date) AS date, topic, SUM(stars) AS stars\n",
+    "FROM TrendingTopic\n",
+    "GROUP BY date, topic\n",
+    "\"\"\"\n",
+    "_, df_trendRepositoriesMainTopics = execute_select_query(cursor, query)\n",
+    "df_trendRepositoriesMainTopics.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_trendRepositoriesMainTopics[\"stars\"] = df_trendRepositoriesMainTopics[\"stars\"].astype(float)\n",
+    "df_trendRepositoriesMainTopics.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_trendRepositoriesMainTopics.pivot_table(index='date', columns=\"topic\", values=\"stars\", aggfunc=\"sum\").plot()"
    ]
   }
  ],
