Fix wrong push of local db name

--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_name = \"githubProject\"\n",
+    "db_name = \"github\"\n",
     "db_host = \"localhost\"\n",
     "db_port = 3306\n",
     "db_username = \"root\"\n",
