--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -1545,7 +1545,7 @@
    "outputs": [],
    "source": [
     "titles_cat = ['Categoria gramatical o símbols', 'Percentatge (%)', 'Distribució ús de categories gramaticals']\n",
-    "titles_en = ['Grammatical category or Symbols', 'Percentage (%)', 'Distribution of use of grammatical Cctegories']\n",
+    "titles_en = ['Grammatical category or symbols', 'Percentage (%)', 'Distribution of use of grammatical categories']\n",
     "\n",
     "titles = titles_cat\n",
     "tag_map = tag_map_cat\n",
