Fix count function not skipping empty lists and skipping lists that contains digits instead of removing the digits

--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -694,6 +694,7 @@
     "    \"readme.md\": \"readme\"\n",
     "}\n",
     "stopwords = set(STOPWORDS)\n",
+    "\n",
     "# stopwords.update([\"a\"]) # Manually add stopwords if needed\n",
     "\n",
     "# Ensure NLTK resources are downloaded\n",
@@ -967,7 +968,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def count_words(df: pd.DataFrame):\n",
@@ -983,13 +986,17 @@
     "    for row in df.iterrows():\n",
     "        text = row[1][0]\n",
     "        text = standardize(text)  # Apply standardization\n",
-    "        if any(char.isdigit() for char in text):\n",
-    "            continue\n",
-    "        # Count the words\n",
+    "        \n",
+    "        # Split the text, remove digits and skip if empty\n",
     "        words = text.split(\" \")\n",
-    "        unique_words = set(words)\n",
+    "        words_without_digits = [word for word in words if not re.search(r'\\d', word)]\n",
+    "        unique_words = set(words_without_digits)\n",
+    "        \n",
+    "        if len(unique_words) == 1 and '' in unique_words:\n",
+    "            continue\n",
+    "            \n",
     "        # Times that a word appears and times that appears in different messages.\n",
-    "        for word in words:\n",
+    "        for word in words_without_digits:\n",
     "            dicc[word][\"n_ocur\"] += 1\n",
     "        for word in unique_words:\n",
     "            dicc[word][\"n_messages\"] += 1\n",
@@ -1035,7 +1042,7 @@
     "    ax.set_xticks(x)\n",
     "    ax.set_xticklabels(x, rotation=90, ha='right')\n",
     "    # Giving X and Y labels\n",
-    "    ax.set_xlabel(\"Word\")\n",
+    "    ax.set_xlabel(\"Paraules\")\n",
     "    ax.set_ylabel(yLabel)\n",
     "     \n",
     "    # We do not call plt.show() here, as we want to show both plots together\n",
@@ -1044,14 +1051,14 @@
     "fig, axs = plt.subplots(1, 2, figsize=(15, 7))\n",
     "\n",
     "# Plot the top words by occurrences\n",
-    "plot_top_words(top_words_list_ocur, \"Ocurrences of the word\", axs[0])\n",
+    "plot_top_words(top_words_list_ocur, \"Ocurrència de paraules\", axs[0])\n",
     "\n",
     "# Plot the top words by occurrences in different messages\n",
-    "plot_top_words(top_words_list_msg, \"Ocurrences of the word per message\", axs[1])\n",
+    "plot_top_words(top_words_list_msg, \"Ocurrencies de paraules per missatge\", axs[1])\n",
     "\n",
     "# Adjust layout for better spacing\n",
     "plt.tight_layout()\n",
-    "\n",
+    "plt.savefig(\"plot\")\n",
     "# Show the plots\n",
     "plt.show()\n",
     "\n",
@@ -1062,7 +1069,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "De les gràfiques, podem veure que en termes quantitatius, són casi idèntics, tenen la mateixa escala i en general, el mateix ordre de les paraules més usades. Això denota que no se sol repetir les paraules en un mateix text, ja que la gràfica de l'esquerra, compta les paraules totals, mentre que el de la dreta, compta les paraules per missatge.\n",
+    "De les gràfiques, podem veure que en termes quantitatius, són casi idèntics, tenen la mateixa escala i en general, el mateix ordre de les paraules més usades, encara que la paraula fix, és el que té més diferència indicant, que les persones usen més d'un cop la paraula fix en un missatge. Tot i això denota que no se sol repetir les paraules en un mateix text, ja que totes les altres paraules, tenen un valor similar i la gràfica de l'esquerra, compta les paraules totals, mentre que el de la dreta, compta les paraules per missatge.\n",
     "\n",
     "Les tres paraules més usades, son `update, add, fix`, els quals eren els mateixos que hem vist en el wordcloud. Hem agrupat les paraules segons un possible significat semàntic.\n",
     "\n",
