Change verb usage to plot only verbs percentage

--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -1616,10 +1616,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "titles_cat = ['Temps verbals dels verbs', 'Percentatge (%)', 'Distribució ús de categories gramaticals']\n",
-    "titles_en = ['Verb tenses of verb', 'Percentage (%)', 'Verb usage distribution']\n",
+    "titles_cat = ['Temps verbals dels verbs', 'Percentatge (%)', 'Distribució ús de verbs segons temps verbal']\n",
+    "titles_en = ['Verb tenses of verb', 'Percentage (%)', 'Verb tenses usage distribution']\n",
     "\n",
-    "titles = titles_en"
+    "titles = titles_cat"
    ]
   },
   {
@@ -1631,8 +1631,12 @@
     "tags = verb_usage['Etiqueta']\n",
     "ratios = verb_usage['Ratio']\n",
     "\n",
-    "print(\"Total percentage of verbs: {:.2f}%\".format(verb_usage['Ratio'].sum()))\n",
+    "total_percentage = verb_usage['Ratio'].sum()\n",
+    "\n",
+    "print(\"Total percentage of verbs: {:.2f}%\".format(total_percentage))\n",
     "print(\"Total verbs:\", verb_usage['Paraules'].sum())\n",
+    "\n",
+    "ratios = verb_usage['Ratio'] / total_percentage\n",
     "\n",
     "# Plotting the ratios\n",
     "plt.figure(figsize=(10, 6))\n",
