Fix wrong calculation of average distribution of gramatical category per message

--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -1684,7 +1684,7 @@
    "outputs": [],
    "source": [
     "def calc_ratios_message(df_commits, tag_map, average_words):\n",
-    "    all_ratios = []\n",
+    "    all_ratios = {}\n",
     "\n",
     "    for message in df_commits.message:\n",
     "        # apply tokenization to the text and tag it\n",
@@ -1701,14 +1701,21 @@
     "        total_tags = sum(tag_counts.values())\n",
     "        tag_ratios = {tag: count / total_tags for tag, count in english_tag_counts.items()}\n",
     "\n",
-    "        all_ratios.append(tag_ratios)\n",
+    "        for key, ratio in tag_ratios.items():\n",
+    "            if key not in all_ratios:\n",
+    "                all_ratios[key] = ratio\n",
+    "            else:\n",
+    "                all_ratios[key] += ratio\n",
     "\n",
     "    # Calculate the average ratios\n",
-    "    avg_ratios = pd.DataFrame(all_ratios).mean().sort_values(ascending=False)\n",
-    "\n",
-    "    # Create a dataframe to show the result\n",
-    "    df_ratios = pd.DataFrame(avg_ratios.reset_index())\n",
-    "    df_ratios.columns = ['Etiqueta', 'Ratio']\n",
+    "    for key in all_ratios:\n",
+    "        all_ratios[key] /= len(df_commits.message)\n",
+    "    \n",
+    "    # Convert to DataFrame\n",
+    "    df_ratios = pd.DataFrame(list(all_ratios.items()), columns=['Tag', 'Ratio'])\n",
+    "    \n",
+    "    # Sort by 'ratio' in descending order\n",
+    "    df_ratios = df_ratios.sort_values(by='Ratio', ascending=False)\n",
     "\n",
     "    # Show the equivalence of ratio in words\n",
     "    data_size = len(df_commits)\n",
@@ -1741,7 +1748,7 @@
    "outputs": [],
    "source": [
     "# Plotting the ratios\n",
-    "tags = df_average_ratio_per_message[\"Etiqueta\"]\n",
+    "tags = df_average_ratio_per_message[\"Tag\"]\n",
     "ratios = df_average_ratio_per_message[\"Ratio\"]\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
@@ -1751,6 +1758,7 @@
     "plt.title(titles[2])\n",
     "plt.xticks(rotation=90)\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"dist_avg_mis\")\n",
     "plt.show()"
    ]
   },
@@ -1763,7 +1771,7 @@
     "titles_cat = ['Temps verbals dels verbs', 'Percentatge (%)', 'Distribució ús de verbs en un missatge segons temps verbal']\n",
     "titles_en = ['Verb tenses of verb', 'Percentage (%)', 'Verb usage distribution in a message based on verb tense']\n",
     "\n",
-    "titles = titles_en"
+    "titles = titles_cat"
    ]
   },
   {
@@ -1773,11 +1781,17 @@
    "outputs": [],
    "source": [
     "# Calculate ratio of verbs\n",
-    "verb_usage = df_average_ratio_per_message[df_average_ratio_per_message['Etiqueta'].str.startswith('Verb')].copy()\n",
+    "verb_usage = df_average_ratio_per_message[df_average_ratio_per_message['Tag'].str.startswith('Verb')].copy()\n",
     "print(verb_usage)\n",
     "\n",
-    "tags = verb_usage['Etiqueta']\n",
+    "tags = verb_usage['Tag']\n",
     "ratios = verb_usage['Ratio']\n",
+    "\n",
+    "total_percentage = verb_usage['Ratio'].sum()\n",
+    "\n",
+    "print(\"Total percentage of verbs: {:.2f}%\".format(total_percentage))\n",
+    "\n",
+    "ratios = verb_usage['Ratio'] / total_percentage\n",
     "\n",
     "# Plotting the ratios\n",
     "plt.figure(figsize=(10, 6))\n",
@@ -1787,6 +1801,7 @@
     "plt.title(titles[2])\n",
     "plt.xticks(rotation=90)\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"dist_avg_mis_verbs\")\n",
     "plt.show()"
    ]
   },
