Change top used words plot and other plot labels adjustments.

--- a/Analysis/analisis_projecte.ipynb
+++ b/Analysis/analisis_projecte.ipynb
@@ -1051,10 +1051,10 @@
     "fig, axs = plt.subplots(1, 2, figsize=(15, 7))\n",
     "\n",
     "# Plot the top words by occurrences\n",
-    "plot_top_words(top_words_list_ocur, \"Ocurrència de paraules\", axs[0])\n",
+    "plot_top_words(top_words_list_ocur, \"Ocurrència totals\", axs[0])\n",
     "\n",
     "# Plot the top words by occurrences in different messages\n",
-    "plot_top_words(top_words_list_msg, \"Ocurrencies de paraules per missatge\", axs[1])\n",
+    "plot_top_words(top_words_list_msg, \"Ocurrencies per missatge\", axs[1])\n",
     "\n",
     "# Adjust layout for better spacing\n",
     "plt.tight_layout()\n",
@@ -1551,8 +1551,8 @@
    },
    "outputs": [],
    "source": [
-    "titles_cat = ['Categoria gramatical o símbols', 'Percentatge (%)', 'Distribució ús de categories gramaticals']\n",
-    "titles_en = ['Grammatical category or symbols', 'Percentage (%)', 'Distribution of use of grammatical categories']\n",
+    "titles_cat = ['Percentatge (%)', 'Categoria gramatical o símbols', 'categories gramaticals usats']\n",
+    "titles_en = ['Percentage (%)', 'Grammatical category or symbols', 'used grammatical categories']\n",
     "\n",
     "titles = titles_cat\n",
     "tag_map = tag_map_cat\n",
@@ -1568,15 +1568,19 @@
    "outputs": [],
    "source": [
     "# Plotting the ratios\n",
-    "tags = df_ratios[\"Etiqueta\"]\n",
-    "ratios = df_ratios[\"Ratio\"]\n",
+    "top_n = 20\n",
+    "tags = df_ratios[\"Etiqueta\"][:top_n]\n",
+    "ratios = df_ratios[\"Ratio\"][:top_n]\n",
+    "\n",
+    "title = \"Top \" + str(top_n) + \" \" + titles[2]\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.bar(tags, ratios, color='skyblue')\n",
+    "plt.barh(tags, ratios, color='skyblue')\n",
     "plt.xlabel(titles[0])\n",
     "plt.ylabel(titles[1])\n",
-    "plt.title(titles[2])\n",
-    "plt.xticks(rotation=90)\n",
+    "plt.title(title)\n",
+    "plt.gca().invert_yaxis()\n",
+    "plt.xticks()\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -1636,7 +1640,7 @@
     "print(\"Total percentage of verbs: {:.2f}%\".format(total_percentage))\n",
     "print(\"Total verbs:\", verb_usage['Paraules'].sum())\n",
     "\n",
-    "ratios = verb_usage['Ratio'] / total_percentage\n",
+    "ratios = verb_usage['Ratio'] / total_percentage * 100\n",
     "\n",
     "# Plotting the ratios\n",
     "plt.figure(figsize=(10, 6))\n",
@@ -1731,8 +1735,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "titles_cat = ['Categoria gramatical o símbols', 'Percentatge (%)', 'Categoria gramatical mitjana d\\'un missatge en termes de paraules utilitzades']\n",
-    "titles_en = ['Grammatical category or Symbols', 'Percentage (%)', 'Average grammatical category of a message in terms of words used']\n",
+    "titles_cat = ['Percentatge (%)', 'Categoria gramatical o símbols', 'categories gramatical mitjana usades per missatge']\n",
+    "titles_en = ['Percentage (%)', 'Grammatical category or Symbols', 'average used grammatical category of a message']\n",
     "\n",
     "titles = titles_cat\n",
     "tag_map = tag_map_cat\n",
@@ -1748,17 +1752,20 @@
    "outputs": [],
    "source": [
     "# Plotting the ratios\n",
-    "tags = df_average_ratio_per_message[\"Tag\"]\n",
-    "ratios = df_average_ratio_per_message[\"Ratio\"]\n",
+    "top_n = 20\n",
+    "title = \"Top \" + str(top_n) + \" \" + titles[2]\n",
+    "\n",
+    "tags = df_average_ratio_per_message[\"Tag\"][:top_n]\n",
+    "ratios = df_average_ratio_per_message[\"Ratio\"][:top_n]\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.bar(tags, ratios, color='skyblue')\n",
+    "plt.barh(tags, ratios, color='skyblue')\n",
     "plt.xlabel(titles[0])\n",
     "plt.ylabel(titles[1])\n",
-    "plt.title(titles[2])\n",
-    "plt.xticks(rotation=90)\n",
+    "plt.title(title)\n",
+    "plt.xticks()\n",
+    "plt.gca().invert_yaxis()\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"dist_avg_mis\")\n",
     "plt.show()"
    ]
   },
@@ -1791,7 +1798,7 @@
     "\n",
     "print(\"Total percentage of verbs: {:.2f}%\".format(total_percentage))\n",
     "\n",
-    "ratios = verb_usage['Ratio'] / total_percentage\n",
+    "ratios = verb_usage['Ratio'] / total_percentage * 100\n",
     "\n",
     "# Plotting the ratios\n",
     "plt.figure(figsize=(10, 6))\n",
